<resources>
    <string name="app_name">LogicProg</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New game</string>
    <string name="options">Options</string>
    <string name="best_scores">Best scores</string>
    <string name="how_to_play">How to play</string>
    <string name="Level">Level: </string>
    <string name="lvlCounter">test</string>
    <string name="Tip">Tip:\n 2, 4, 6, 8, 10\n\n 20</string>
    <string name="mathematics">Mathematics</string>
    <string name="arithmetic">Arithmetic</string>
    <string name="puzzles">Puzzles</string>
    <string name="blitz">Blitz</string>
    <string name="random">Random</string>
    <string name="level">Level</string>
</resources>
