<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Level"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:id="@+id/textView"
            android:layout_alignTop="@+id/level_text_view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lvlCounter"
            android:id="@+id/level_text_view"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView" />

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/restart_btn"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/refresh_5151"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp" />

    </RelativeLayout>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/Tip"
        android:id="@+id/tip_text_view"
        android:textSize="25sp"
        android:textIsSelectable="false"
        android:paddingTop="10dp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button1_1"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button1_2"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button1_3"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button1_4"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button1_5"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button1_6"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button2_1"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button2_2"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button2_3"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button2_4"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button2_5"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button2_6"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button3_1"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button3_2"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button3_3"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button3_4"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button3_5"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button3_6"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button4_1"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button4_2"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button4_3"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button4_4"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button4_5"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button4_6"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button5_1"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button5_2"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button5_3"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button5_4"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button5_5"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button5_6"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button6_1"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button6_2"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button6_3"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button6_4"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button6_5"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button6_6"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button7_1"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button7_2"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button7_3"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button7_4"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button7_5"/>
            <Button
                style="@style/styleOnCellButton"
                android:id="@+id/button7_6"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>